--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="light">#fbd6d2</color>
+    <color name="back">#471c57</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="md_theme_primary">#8C4A60</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#FFD9E2</color>
+    <color name="md_theme_onPrimaryContainer">#3A071D</color>
+    <color name="md_theme_secondary">#00696F</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#9CF0F7</color>
+    <color name="md_theme_onSecondaryContainer">#002022</color>
+    <color name="md_theme_tertiary">#00696F</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#9CF0F7</color>
+    <color name="md_theme_onTertiaryContainer">#002022</color>
+    <color name="md_theme_error">#904B3E</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_errorContainer">#FFDAD4</color>
+    <color name="md_theme_onErrorContainer">#3A0A04</color>
+    <color name="md_theme_background">#FFF8F8</color>
+    <color name="md_theme_onBackground">#22191C</color>
+    <color name="md_theme_surface">#FFF8F8</color>
+    <color name="md_theme_onSurface">#22191C</color>
+    <color name="md_theme_surfaceVariant">#F2DDE1</color>
+    <color name="md_theme_onSurfaceVariant">#514347</color>
+    <color name="md_theme_outline">#837377</color>
+    <color name="md_theme_outlineVariant">#D5C2C6</color>
+    <color name="md_theme_scrim">#000000</color>
+    <color name="md_theme_inverseSurface">#372E30</color>
+    <color name="md_theme_inverseOnSurface">#FDEDEF</color>
+    <color name="md_theme_inversePrimary">#FFB1C8</color>
+    <color name="md_theme_primaryFixed">#FFD9E2</color>
+    <color name="md_theme_onPrimaryFixed">#3A071D</color>
+    <color name="md_theme_primaryFixedDim">#FFB1C8</color>
+    <color name="md_theme_onPrimaryFixedVariant">#703348</color>
+    <color name="md_theme_secondaryFixed">#9CF0F7</color>
+    <color name="md_theme_onSecondaryFixed">#002022</color>
+    <color name="md_theme_secondaryFixedDim">#80D4DA</color>
+    <color name="md_theme_onSecondaryFixedVariant">#004F54</color>
+    <color name="md_theme_tertiaryFixed">#9CF0F7</color>
+    <color name="md_theme_onTertiaryFixed">#002022</color>
+    <color name="md_theme_tertiaryFixedDim">#80D4DA</color>
+    <color name="md_theme_onTertiaryFixedVariant">#004F54</color>
+    <color name="md_theme_surfaceDim">#E6D6D9</color>
+    <color name="md_theme_surfaceBright">#FFF8F8</color>
+    <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow">#FFF0F2</color>
+    <color name="md_theme_surfaceContainer">#FAEAED</color>
+    <color name="md_theme_surfaceContainerHigh">#F5E4E7</color>
+    <color name="md_theme_surfaceContainerHighest">#EFDFE1</color>
+    <color name="md_theme_primary_mediumContrast">#6B2F44</color>
+    <color name="md_theme_onPrimary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#A55F76</color>
+    <color name="md_theme_onPrimaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_mediumContrast">#004B4F</color>
+    <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#238086</color>
+    <color name="md_theme_onSecondaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_mediumContrast">#004B4F</color>
+    <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#238086</color>
+    <color name="md_theme_onTertiaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_error_mediumContrast">#6E3025</color>
+    <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_mediumContrast">#AA6052</color>
+    <color name="md_theme_onErrorContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_background_mediumContrast">#FFF8F8</color>
+    <color name="md_theme_onBackground_mediumContrast">#22191C</color>
+    <color name="md_theme_surface_mediumContrast">#FFF8F8</color>
+    <color name="md_theme_onSurface_mediumContrast">#22191C</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#F2DDE1</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#4D3F43</color>
+    <color name="md_theme_outline_mediumContrast">#6A5B5F</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#87777A</color>
+    <color name="md_theme_scrim_mediumContrast">#000000</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#372E30</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#FDEDEF</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#FFB1C8</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#A55F76</color>
+    <color name="md_theme_onPrimaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#89475E</color>
+    <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#238086</color>
+    <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#00666C</color>
+    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#238086</color>
+    <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#00666C</color>
+    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#E6D6D9</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#FFF8F8</color>
+    <color name="md_theme_surfaceContainerLowest_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#FFF0F2</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#FAEAED</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#F5E4E7</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#EFDFE1</color>
+    <color name="md_theme_primary_highContrast">#420E24</color>
+    <color name="md_theme_onPrimary_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_highContrast">#6B2F44</color>
+    <color name="md_theme_onPrimaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_highContrast">#002729</color>
+    <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_highContrast">#004B4F</color>
+    <color name="md_theme_onSecondaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_highContrast">#002729</color>
+    <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#004B4F</color>
+    <color name="md_theme_onTertiaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_error_highContrast">#431008</color>
+    <color name="md_theme_onError_highContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_highContrast">#6E3025</color>
+    <color name="md_theme_onErrorContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_background_highContrast">#FFF8F8</color>
+    <color name="md_theme_onBackground_highContrast">#22191C</color>
+    <color name="md_theme_surface_highContrast">#FFF8F8</color>
+    <color name="md_theme_onSurface_highContrast">#000000</color>
+    <color name="md_theme_surfaceVariant_highContrast">#F2DDE1</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#2C2124</color>
+    <color name="md_theme_outline_highContrast">#4D3F43</color>
+    <color name="md_theme_outlineVariant_highContrast">#4D3F43</color>
+    <color name="md_theme_scrim_highContrast">#000000</color>
+    <color name="md_theme_inverseSurface_highContrast">#372E30</color>
+    <color name="md_theme_inverseOnSurface_highContrast">#FFFFFF</color>
+    <color name="md_theme_inversePrimary_highContrast">#FFE6EB</color>
+    <color name="md_theme_primaryFixed_highContrast">#6B2F44</color>
+    <color name="md_theme_onPrimaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#50192E</color>
+    <color name="md_theme_onPrimaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_highContrast">#004B4F</color>
+    <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#003236</color>
+    <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#004B4F</color>
+    <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#003236</color>
+    <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_highContrast">#E6D6D9</color>
+    <color name="md_theme_surfaceBright_highContrast">#FFF8F8</color>
+    <color name="md_theme_surfaceContainerLowest_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#FFF0F2</color>
+    <color name="md_theme_surfaceContainer_highContrast">#FAEAED</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#F5E4E7</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#EFDFE1</color>
 </resources>
