--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/back"
-    tools:context=".login_activity">
+    tools:context=".LoginActivity">
 
     <ImageView
         android:id="@+id/imageView"
