--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:background="@color/back"
     android:gravity="center_horizontal"
-    tools:context=".register_activity">
+    tools:context=".RegisterActivity">
 
     <ImageView
         android:id="@+id/img_registe_goat"
