--- a/app/src/main/res/menu/icnons.xml
+++ b/app/src/main/res/menu/icnons.xml
@@ -3,13 +3,13 @@
     <item
         android:id="@+id/page_count"
         android:icon="@android:drawable/ic_menu_my_calendar"
-        android:title="Tu Cuenta" />
+        android:title="@string/tu_cuenta" />
     <item
         android:id="@+id/page_Scanner"
         android:icon="@android:drawable/ic_menu_view"
-        android:title="Scanear" />
+        android:title="@string/scanear" />
     <item
         android:id="@+id/page_Carrito"
         android:icon="@android:drawable/btn_star_big_off"
-        android:title="Carrito" />
+        android:title="@string/carrito" />
 </menu>
