--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
         android:text="@string/comic_anime"
         android:textColor="@color/light"
         android:textSize="38dp"
-        android:textStyle="bold"></TextView>
+        android:textStyle="bold">
+    </TextView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -55,7 +56,8 @@
             app:iss_auto_cycle="true"
             app:iss_delay="2000"
             app:iss_period="2000"
-            app:iss_text_align="CENTER" />
+            app:iss_text_align="CENTER"
+            tools:ignore="MissingClass" />
 
 
     </androidx.cardview.widget.CardView>
