--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:gravity="center_horizontal"
 
         android:text="@string/comic_anime"
-        android:textColor="@color/light"
+        android:textColor="@color/back"
         android:textSize="38dp"
         android:textStyle="bold">
     </TextView>
@@ -96,7 +96,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:menu="@menu/icnons"
-        android:background="@color/light"
+        android:background="@color/back"
         >
 
 
