--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -113,7 +113,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/icnons"></com.google.android.material.bottomnavigation.BottomNavigationView>
+        app:menu="@menu/icnons" />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
