--- a/app/src/main/res/menu/icnons.xml
+++ b/app/src/main/res/menu/icnons.xml
@@ -3,8 +3,7 @@
     <item
         android:id="@+id/page_count"
         android:icon="@drawable/cuenta"
-        android:title="@string/tu_cuenta"
-        />
+        android:title="@string/tu_cuenta" />
     <item
         android:id="@+id/page_scanner"
         android:icon="@drawable/scanner"
@@ -14,3 +13,4 @@
         android:icon="@drawable/carrito"
         android:title="@string/carrito" />
 </menu>
+
