--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,13 +90,18 @@
             android:text="@string/ver_todo"
             android:textColor="@color/light"
             android:textStyle="italic" />
+
     </LinearLayout>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_products_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="3" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
-<<<<<<<<< Temporary merge branch 1
-=========
+
         android:id="@+id/bottom_navigation_tienda"
->>>>>>>>> Temporary merge branch 2
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:menu="@menu/icnons"
