--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-
         android:text="@string/comic_anime"
         android:textColor="@color/light"
         android:textSize="38dp"
@@ -105,13 +104,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:menu="@menu/icnons"
-        android:background="@color/back"
-        >
-
-
-    </com.google.android.material.bottomnavigation.BottomNavigationView>
+        android:background="@drawable/bb_back"/>
 
 </LinearLayout>
+
 
 
 
