--- a/app/src/main/res/drawable/bb_back.xml
+++ b/app/src/main/res/drawable/bb_back.xml
@@ -2,11 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-        <solid android:color="@color/light" />
-        <corners android:radius="50dp" />
-            <size
-                android:width="200dp"
-                android:height="20dp" />
+        <solid android:color="@color/back" />
+        <corners android:radius="70dp" />
     </shape>
     </item>
 </selector>
