--- a/app/src/main/res/layout/activity_rol.xml
+++ b/app/src/main/res/layout/activity_rol.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_rol"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/back"
@@ -22,11 +23,12 @@
                 android:id="@+id/tv_title_rol"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingTop="20dp"
                 android:text="¿Que rol deseas desempeñar?"
                 android:textAlignment="center"
+                android:textColor="@color/light"
                 android:textSize="24sp"
-                android:textStyle="bold"
-                android:textColor="@color/light" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tv_vendor_title"
@@ -38,23 +40,23 @@
                 android:textColor="@color/light" />
 
 
-
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 tools:paddingTop="20dp">
 
                 <ImageView
                     android:id="@+id/iv_vendor"
-                    android:layout_width="wrap_content"
+                    android:layout_width="187dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     app:srcCompat="@drawable/mockup_comic_anime__2__removebg_preview" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
                     android:orientation="vertical"
                     android:paddingStart="10dp">
 
@@ -65,14 +67,15 @@
                         android:layout_weight="0"
                         android:gravity="center_vertical"
                         android:paddingTop="50dp"
+                        android:paddingRight="8dp"
+                        android:paddingBottom="20dp"
                         android:text="El rol de vendedor es para poder brindarte informacion de algun articulo, objeto o mercancia que queiras vender por medio de nosotros para poder impulsar tu emprendimiento u producto"
                         android:textAlignment="center"
-                        android:paddingBottom="20dp"
                         android:textColor="@color/light" />
 
                     <Button
                         android:id="@+id/btn_vendor_rol"
-                        android:layout_width="180dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="0"
                         android:background="@drawable/lishtbtn"
@@ -90,6 +93,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
                 android:gravity="center_horizontal"
+                android:paddingTop="12dp"
                 android:text="Usuario"
                 android:textColor="@color/light"
                 android:textSize="40dp" />
@@ -102,7 +106,7 @@
                 android:paddingBottom="50dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:paddingTop="20dp">
@@ -116,7 +120,8 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
                         android:orientation="vertical"
                         android:paddingStart="10dp">
 
@@ -127,14 +132,16 @@
                             android:layout_weight="0"
                             android:gravity="center_vertical"
                             android:paddingTop="50dp"
+                            android:paddingRight="8dp"
                             android:paddingBottom="20dp"
                             android:text="El rol de usuario es por si quieres usar nuestra aplicación para poder adquirir productos y estar al tanto de los últimos eventos o convenciones cerca de ti o relacionada a tus gustos en todo el mundo :D"
                             android:textAlignment="center"
-                            android:textColor="@color/light" />
+                            android:textColor="@color/light"
+                            tools:ignore="RtlCompat" />
 
                         <Button
                             android:id="@+id/btn_user_rol"
-                            android:layout_width="180dp"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="0"
                             android:background="@drawable/lishtbtn"
