--- a/app/src/main/res/menu/icnons.xml
+++ b/app/src/main/res/menu/icnons.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/page_count"
-        android:icon="@drawable/cuenta"
+        android:icon="@drawable/login"
         android:title="@string/tu_cuenta" />
     <item
         android:id="@+id/page_scanner"
