--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,11 +3,13 @@
     <style name="Base.Theme.ProjectEcomm" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
     </style>
 
     <style name="Theme.ProjectEcomm" parent="Base.Theme.ProjectEcomm" />
 
     <style name="CustomProgressBar" parent="@android:style/Widget.ProgressBar.Horizontal">
-        <item name="android:progressDrawable">@drawable/progressbar</item>
+        <item name="android:progressDrawable">@drawable/bb_back</item>
     </style>
+
 </resources>
